tp4/backend-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-training-app
  template:
    metadata:
      labels:
        app: back-training-app
    spec:
      containers:
        - name: frontend
          image: axelpereira/k8s-training-test-app-back:1.0
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
