tp4/back-ingress-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: back-training-app
                port:
                  number: 80
